5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1832_3176.log
== TEST (2019-06-13 18:14:20) 
-- CODE:
from numpy import*
vogal=input("digite a vogal:")
copy=""
a=0
b=0
for i in vogal:
	if(i<size(vogal)!='a','e','i','o','u'):
		a=a+1
print(i)
for j in vogal:
	if(1<size(vogal)!='b','c','d','f','g','h','j','k','l','m','n','p','q','r','s','t','v','x','w','y','z'):
		b=b+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:04) 
-- CODE:
from numpy import*
vogal=input("digite a vogal:")
copy=""
a=0
b=0
for i in vogal:
	if(i<size(vogal)!='a' and 'e' and 'i' and 'o' and 'u'):
		a=a+1
print(i)
for j in vogal:
	if(1<size(vogal)!='b' and 'c' and 'd' and 'f' and 'g' and 'h' and 'j' and 'k' and 'l' and 'm' and 'n' and 'p' and 'q' and 'r' and 's' and 't' and 'v' and 'x' and 'w' and 'y' and'z'):
		b=b+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:19:26) 
-- CODE:
from numpy import*
vogal=input("digite a vogal:")
copy=""
a=0
b=0
for i in vogal:
	if(i<size(vogal)!='a' and 'e' and 'i' and 'o' and 'u'):
		a=a+1
print(i)
for j in vogal:
	if(1<size(vogal)!='b' and 'c' and 'd' and 'f' and 'g' and 'h' and 'j' and 'k' and 'l' and 'm' and 'n' and 'p' and 'q' and 'r' and 's' and 't' and 'v' and 'x' and 'w' and 'y' and'z'):
		b=b+1
print(j)
-- EXECUTION TIME:
1.06485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3176/main.py", line 7, in <module>
    if(i<size(vogal)!='a' and 'e' and 'i' and 'o' and 'u'):
TypeError: unorderable types: str() < int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:26:25) 
-- CODE:
from numpy import*
vv=input("digite a vogal:")
copy=""
a='a','e','i','o','u'
b='b','c','d','f','g','h','j','k','l','m','n','o','p','q','r','s','t','v','x','z','w','y'
for i in v:
	if(i<size(v)!=a:
		copy=copy+i
	print(copy)
for j in vogal:
	if(1<size(vogal)!=b):
		copy=copy+j
	print(copy)
-- ERROR:
File "XXXX", line 7
    if(i<size(v)!=a:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:26) 
-- CODE:
from numpy import*
vv=input("digite a vogal:")
copy=""
a='a','e','i','o','u'
b='b','c','d','f','g','h','j','k','l','m','n','o','p','q','r','s','t','v','x','z','w','y'
for i in v:
	if(i != a):
		copy=copy+i
	print(copy)
for j in vogal:
	if(j !=b):
		copy=copy+j
	print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:47) 
-- CODE:
from numpy import*
vv=input("digite a vogal:")
copy=""
a='a','e','i','o','u'
b='b','c','d','f','g','h','j','k','l','m','n','o','p','q','r','s','t','v','x','z','w','y'
for i in v:
	if(i != a):
		copy=copy+i
	print(copy)
for j in v:
	if(j !=b):
		copy=copy+j
	print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:28:05) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
a='a','e','i','o','u'
b='b','c','d','f','g','h','j','k','l','m','n','o','p','q','r','s','t','v','x','z','w','y'
for i in v:
	if(i != a):
		copy=copy+i
	print(copy)
for j in v:
	if(j !=b):
		copy=copy+j
	print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:32:58) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
for i in v:
	if(i != a):
		copy=copy+i
	print(copy)
for j in v:
	if(j !=b):
		copy=copy+j
	print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:33:57) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy1=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
for i in v:
	if(i != a):
		copy1=copy1+i
	print(copy1)
for j in v:
	if(j !=b):
		copy2=copy2+j
	print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:36:24) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy1=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy1=copy1+i
	print(copy1)
for j in v:
	if(j !=b):
		copy2=copy2+j
	print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:28) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+1
	print(copy1)
for j in v:
	if(j !=b):
		copy2=copy2+j
	print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:44) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+1
	print(copy)
for j in v:
	if(j !=b):
		copy2=copy2+j
	print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:38:20) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
	print(copy)
for j in v:
	if(j !=b):
		copy2=copy2+j
	print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:39:15) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
	print(copy)
for j in v:
	if(j !=b):
		copy2=copy2+j
		f=f+1
	print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:39:45) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
	print(copy)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:40:07) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
	print(copy)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:16) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(copy)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:25) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:58) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
a="a","e","i","o","u"
b="b","c","d","f","g","h","j","k","l","m","n","o","p","q","r","s","t","v","x","z","w","y"
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))
for j in v:
	if(j!=b):
		copy2=copy2+j
		f=f+1
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:50:41) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))
for j in v:
	if(j!="b"j !="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		c=copy2+j
		f=f+1
print(size(copy2))


-- ERROR:
File "XXXX", line 13
    if(j!="b"j !="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:23) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))
for j in v:
	if(j!="b"j !="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		c=copy2+j
		f=f+1
print(size(copy2))


-- ERROR:
File "XXXX", line 13
    if(j!="b"j !="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:41) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))
for j in v:
	if(j!="b" j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		c=copy2+j
		f=f+1
print(size(copy2))


-- ERROR:
File "XXXX", line 13
    if(j!="b" j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:55) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))
for j in v:
	if(j!="b" j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
		f=f+1
print(size(copy2))


-- ERROR:
File "XXXX", line 13
    if(j!="b" j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:37) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
		e=e+1
print(size(copy))
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
		f=f+1
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:16) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
print(size(copy))
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:03:30) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i != "a" and i!="e" and i!="i" and i!= "o" and i!="u"):
		copy=copy+i
print(size(copy))
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:04) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=""
copy2=""
e=0
f=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+i
print(size(copy))
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:07:10) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=""
e=0
f=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(size(copy))
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:07:34) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=""
e=0
f=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(size(copy2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:20) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
e=0
f=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(size(v)-copy)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:10:17) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
e=0
f=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(len(v)-copy)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:10:36) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
e=0
f=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy2=copy2+j
print(len(v)-copy)


-- EXECUTION TIME:
0.977549
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3176/main.py", line 13, in <module>
    copy2=copy2+j
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:09) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy=copy+1
print(len(v)-copy)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:20) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy=copy+1
print(len(v)-copy)


-- EXECUTION TIME:
0.966399
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
4
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
-1
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:26) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)
for j in v:
	if(j!="b" and j!="c" and j!="d" and j!="f" and j!="g" and j!="h" and j!="j" and j!="l" and j!="k" and j!="m" and j!="n" and j!="o" and j!="p" and j!="q" and j!="r" and j!="s" and j!="t" and j!="v" and j!="z" and j!="w" and j!="x" and j!="y" ):
		copy=copy+1
print(len(v)-copy)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:51) 
-- CODE:
from numpy import*
v=input("digite a vogal:")
copy=0
copy2=0
for i in v:
	if(i== "a" or i=="e" or i=="i" or i== "o" or i=="u"):
		copy=copy+1
print(copy)

print(len(v)-copy)


-- EXECUTION TIME:
1.11408
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
